--- a/build.yaml
+++ b/build.yaml
@@ -6,7 +6,7 @@ requirements: |
 license: |
   MIT License
 
-  Copyright (c) [year] [fullname]
+  Copyright (c) 2024 Sharp Type Co.
 
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to deal
