--- a/info.yaml
+++ b/info.yaml
@@ -1,18 +1,14 @@
-name: myExtension
-developer: RoboDocs
-developerURL: http://github.com/roboDocs
+name: OmniLatinTool
+developer: Sharp Type
+developerURL: http://github.com/SharpType
 launchAtStartUp: true
-mainScript: hello.py
-version: 0.2.6
+mainScript: omniLatinTool.py
+version: 0.0.1
 addToMenu:
-- path: doSomething.py
+- path: omniLatinTool.py
   preferredName: do something
   shortKey: [1179648, b]
-- path: doSomethingElse.py
-  preferredName: do something else
-  shortKey: [524288, o]
 html: true
-timeStamp: 1638366053.720922
+timeStamp: 1734436800.0
 requiresVersionMajor: '4'
 requiresVersionMinor: '0'
-expireDate: '2020-12-31'
