--- a/info.yaml
+++ b/info.yaml
@@ -7,6 +7,7 @@ version: 0.0.2
 addToMenu:
 - path: omniLatinTool.py
   preferredName: OmniLatinTool
+  shortKey: [524288, o]
 html: true
 timeStamp: 1734436800.0
 requiresVersionMajor: '4'
