--- a/info.yaml
+++ b/info.yaml
@@ -7,7 +7,7 @@ version: 0.0.5
 addToMenu:
 - path: omniLatinTool.py
   preferredName: OmniLatinTool
-  shortKey:
+  shortKey: ""
 html: true
 timeStamp: 1734436800.0
 requiresVersionMajor: '4'
